Update Process.java
JDK 25